(refactor): -make "add to cart" button fixed visible on mobile

--- a/src/features/products/ui/productCard.css
+++ b/src/features/products/ui/productCard.css
@@ -60,7 +60,6 @@
   color: var(--color-primary);
 }
 .card__add-to-bag-icon {
-  opacity: 0;
   border-radius: 50%;
   background-color: var(--color-primary);
 
@@ -73,4 +72,7 @@
 }
 
 @media (min-width: 768px) {
+  .card__add-to-bag-icon {
+    opacity: 0;
+  }
 }
